--- a/src/components/Arrow.astro
+++ b/src/components/Arrow.astro
@@ -1,16 +1,20 @@
-<svg version='1.1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96.918 120' width='120' height='120'>
+<svg version='1.1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 92.60205569370652 123.55819168657996' width='110'
+  height='100'>
   <!-- svg-source:excalidraw -->
   <g stroke-linecap='round'>
-    <g transform='translate(10 110) rotate(0 38.459 -50)'>
+    <g transform='translate(10.803131044656027 112.0702469341457) rotate(0 35.49789680219723 -50.29115109085572)'>
       <path
-        d='M0 0 C10 -4.5, 47.33 -15.17, 60 -27 C72.67 -38.83, 73.5 -58.83, 76 -71 C78.5 -83.17, 75.17 -95.17, 75 -100 M0 0 C10 -4.5, 47.33 -15.17, 60 -27 C72.67 -38.83, 73.5 -58.83, 76 -71 C78.5 -83.17, 75.17 -95.17, 75 -100'
+        d='M-0.8 -0.74 C5.81 -2.58, 29.31 -3.52, 40.11 -12.07 C50.91 -20.62, 58.8 -37.05, 64.01 -52.05 C69.21 -67.05, 70.11 -94.09, 71.36 -102.07 M0.98 1.49 C7.49 -0.59, 28.84 -4.47, 39.74 -13.7 C50.64 -22.93, 61.03 -39.25, 66.38 -53.89 C71.72 -68.52, 71.14 -93.41, 71.8 -101.53'
         stroke='currentColor' stroke-width='1' fill='none'></path>
     </g>
-    <g transform='translate(10 110) rotate(0 38.459 -50)'>
-      <path d='M75 -100 L82.98 -87.3 L70.4 -85.72 L75 -100' stroke='none' stroke-width='0' fill='currentColor'
-        fill-rule='evenodd'></path>
+    <g transform='translate(10.803131044656027 112.0702469341457) rotate(0 35.49789680219723 -50.29115109085572)'>
       <path
-        d='M75 -100 C77.19 -96.51, 79.39 -93.01, 82.98 -87.3 M75 -100 C77.32 -96.3, 79.65 -92.6, 82.98 -87.3 M82.98 -87.3 C78.04 -86.68, 73.1 -86.06, 70.4 -85.72 M82.98 -87.3 C78.88 -86.78, 74.77 -86.27, 70.4 -85.72 M70.4 -85.72 C71.45 -88.99, 72.5 -92.25, 75 -100 M70.4 -85.72 C72.16 -91.2, 73.93 -96.67, 75 -100 M75 -100 C75 -100, 75 -100, 75 -100 M75 -100 C75 -100, 75 -100, 75 -100'
+        d='M77.91 -76.64 C78.42 -87.95, 75.98 -93.44, 70.02 -100.68 M78.79 -79.3 C76.03 -88, 73.13 -97.02, 72.18 -101.92'
+        stroke='currentColor' stroke-width='1' fill='none'></path>
+    </g>
+    <g transform='translate(10.803131044656027 112.0702469341457) rotate(0 35.49789680219723 -50.29115109085572)'>
+      <path
+        d='M61.38 -77.31 C67.45 -88.28, 70.57 -93.55, 70.02 -100.68 M62.26 -79.97 C65.95 -88.45, 69.5 -97.2, 72.18 -101.92'
         stroke='currentColor' stroke-width='1' fill='none'></path>
     </g>
   </g>
