--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ const theme = cookie?.split('theme=')[1].split(';')[0];
 	<head>
 		<meta charset='utf-8' />
 		<meta name='viewport' content='width=device-width' />
+		<meta name='color-scheme' content='dark light' />
 		<title>Theme toggle with Astro SSR</title>
 		{!theme && (
 			<script is:inline>
